now api updates
